3-running-in-k8s/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: mikesir87/dc2021:backend
          resources:
            limits:
              memory: 512Mi
              cpu: "500m"
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /app/config
      volumes:
        - name: config
          secret:
            secretName: backend-config
            items:
              - key: application.properties
                path: application.properties
