3-running-in-k8s/deployment-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: mikesir87/dc2021:client
          resources:
            limits:
              memory: 512Mi
              cpu: "500m"
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config
              mountPath: /usr/share/nginx/html/config.json
              subPath: config.json
      volumes:
        - name: config
          configMap:
            name: client-config
            items:
              - key: config.json
                path: config.json
