3-running-in-k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: client
spec:
  rules:
    - host: client.localhost
      http:
        paths:
        - path: /
          backend:
            serviceName: client
            servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: backend
spec:
  rules:
    - host: backend.localhost
      http:
        paths:
        - path: /
          backend:
            serviceName: backend
            servicePort: 8080
